--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Flask Weather App</title>
   </head>
-  <body>
+  <body style='background-color: #f5f5f5'>
           <br>
           <div class='container'>
                   <div class='container-md'>
                           <h1>Flask Weather App</h1>
                           <br>
                           <div>
-                                  <form method='POST' class='card border-1 p-3 shadow-md' style='background-color: #f5f5f5'>  
+                                  <form method='POST' class='card border-1 p-3 shadow-md'>  
                                           <h6>Enter City and State to search for Weather</h6>
                                           <br/><br/>
                                           <br/>
@@ -38,7 +38,7 @@
                           <br>
                           {% if request.method == 'POST' %}
                           <div>
-                                  <form class='card border-1 p-3 shadow-md' style='background-color: #f5f5f5'>
+                                  <form class='card border-1 p-3 shadow-md'>
                                           <h4>Weather for:</h4>
                                           <br>
                                           <h4>{{ city }}, {{ state }}</h4>
